# bulldozer

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Jenkinsfile.gvy  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  mkdocs.yaml  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: create-and-publish-wheel.yaml
.github/workflows/: build-and-publish_docker.yaml  create-and-publish-wheel.yaml
bulldozer/: DTMEstimator.py  __init__.py  _version.py  bulldozer.py  bulldozer_pipeline.py  config_parser.py
bulldozer/clothsimu/: dtm_extraction.py
bulldozer/core/: BulldozerFilters.pxd  bulldozerfilters.cpp  dsm_preprocess.py  dtm_extraction.py  dtm_postprocess.py
bulldozer/core/cpp_core/: BulldozerFilters.cpp  BulldozerFilters.pxd  BulldozerFilters.pyx  DisturbedAreas.cpp  DisturbedAreas.h  DisturbedAreas.pxd  DisturbedAreas.pyx
bulldozer/core/cpp_core/src/: BulldozerFilters.h  DisturbedAreas.cpp  DisturbedAreas.h
bulldozer/danesfield_DTM/: __init__.py
bulldozer/dtm_extraction/: dtm_extraction.py
bulldozer/dtm_extraction/springforce/: c_springforce.cpp  springforce.cpp
bulldozer/eomultiprocessing/: bulldozer_executor.py  bulldozer_manager.py  utils.py
bulldozer/eoscale/: eo_executors.py  manager.py  shared.py  utils.py
bulldozer/extraction/: drape_cloth.py
bulldozer/extraction/cython/: c_springforce.cpp  c_springforce.h  idw.c  springforce.cpp  springforce.pyx
bulldozer/multiprocessing/: bulldozer_executor.py  bulldozer_manager.py  utils.py
bulldozer/pipeline/: __init__.py  bulldozer_parameters.py  bulldozer_pipeline.py  logging.ini
bulldozer/postprocessing/: bulldozer_postprocess.py  dtm_postprocess.py  fill_pits.py
bulldozer/postprocessing/ground_detection/: post_anchorage_detection.py
bulldozer/preprocess/: dsm_preprocess.py
bulldozer/preprocessing/: dsm_preprocess.py
bulldozer/preprocessing/anchorage_prediction/: anchorage_predictor.py
bulldozer/preprocessing/anchorage_prediction/cython/: c_anchorage_prediction.cpp  c_anchorage_prediction.h
bulldozer/preprocessing/border_detection/: border_detector.py
bulldozer/preprocessing/border_detection/cython/: border.pyx  c_border.cpp  c_border.h
bulldozer/preprocessing/bordernodata/: border.py  bordernodata.pyx  c_bordernodata.h
bulldozer/preprocessing/bordernodata/cython/: bordernodata.pyx  c_bordernodata.cpp  c_bordernodata.h
bulldozer/preprocessing/disturbedareas/: c_disturbedareas.cpp  disturbedareas.cpp  disturbedareas.pyx
bulldozer/preprocessing/dsm_filling/: __init__.py  dsm_filler.py
bulldozer/preprocessing/dsm_filling/cython/: c_fill.cpp  c_fill.h  fill.pyx
bulldozer/preprocessing/fill/: fill_dsm.py  prefill_dsm.py
bulldozer/preprocessing/ground_detection/: ground_anchors_detector.py
bulldozer/preprocessing/outliers/: histogram.py
bulldozer/preprocessing/regular_detection/: regular_detector.py
bulldozer/preprocessing/regular_detection/cython/: c_regular.cpp  c_regular.h  regular.pyx
bulldozer/scale/: Shared.py
bulldozer/utils/: bulldozer_argparse.py  bulldozer_logger.py  config_parser.py  helper.py  logging_helper.py
conf/: basic_conf_template.yaml  conf_save.yaml  configuration_template.yaml  logging.ini
docs/: index.md
docs/css/: extra.css
docs/javascripts/: extra.js
docs/notebooks/: 0_bulldozer_pipeline.ipynb  1_preprocess.ipynb  2_DTM_extraction.ipynb  3_postprocess.ipynb
docs/notebooks/pipeline/: 0_bulldozer_pipeline.ipynb  1_preprocess.ipynb  2_DTM_extraction.ipynb
docs/notebooks/tutorials/: From_Lidar_data_to_DTM.ipynb
docs/overrides/: main.html
docs/overrides/partials/: header.html  source.html
docs/source/: CONTRIBUTING.md  GETTING_STARTED.md  INPUT_DATA_PREPROCESSING.md  INSTALLATION.md  INTRODUCTION.md  LICENSE.md  REFERENCES.md  RUN_BULLDOZER.md  input_data_preprocessing.md  installation.md
docs/source/getting_started/: installation.md  quick_start.md
docs/source/tutorials/: BULLDOZER_OPTIONS.md  FROM_LIDAR_DATA_TO_DTM.md  FROM_SATELLITES_DATA_TO_DTM.md
docs/source/tutorials/notebooks/: From_Lidar_data_to_DTM.ipynb  From_Satellites_data_to_DTM.ipynb
docs/source/user_guide/: bulldozer_cli.md  bulldozer_docker.md  bulldozer_options.md  bulldozer_outputs.md  bulldozer_python_api.md  how_to_run_bulldozer.md  input_data_preprocessing.md
docs/stylesheets/: extra.css
notebooks/: PostProcess.ipynb  PreProcess.ipynb  bulldozer.ipynb
original/: danesfield.py
src/bulldozer/disturbedareas/: c_disturbedareas.cpp  c_disturbedareas.h  disturbedareas.cpp  disturbedareas.pyx
src/bulldozer/dtm_extraction/: dtm_extraction.py
src/bulldozer/dtm_extraction/springforce/: springforce.cpp
src/bulldozer/eoscale/: eo_executors.py  manager.py  shared.py
src/bulldozer/extraction/: drape_cloth.py
src/bulldozer/pipeline/: bulldozer_pipeline.py
src/bulldozer/postprocess/: dtm_postprocess.py
src/bulldozer/postprocessing/: dtm_postprocess.py
src/bulldozer/postprocessing/ground_detection/: post_anchorage_detection.py
src/bulldozer/preprocessing/: dsm_preprocess.py
src/bulldozer/preprocessing/anchorage_prediction/: anchorage_predictor.py
src/bulldozer/preprocessing/bordernodata/: bordernodata.cpp  bordernodata.pxd  bordernodata.pyx  c_bordernodata.cpp
src/bulldozer/preprocessing/disturbedareas/: c_disturbedareas.cpp  c_disturbedareas.h  disturbedareas.cpp  disturbedareas.pyx
src/bulldozer/preprocessing/fill/: fill_dsm.py  prefill_dsm.py  uncertain_fill.py
src/bulldozer/preprocessing/outliers/: histogram.py
src/bulldozer/scale/: Shared.py  tools.py
src/bulldozer/springforce/: c_springforce.cpp  c_springforce.h  springforce.cpp  springforce.pyx
src/bulldozer/utils/: config_parser.py  helper.py  logging_helper.py
tests/: __init__.py  test_bulldozer.py  test_bulldozer_pipeline.py  test_config_parser.py  test_dsm_preprocess.py  test_dtm_postprocess.py
tests/data/: test.yaml
tests/tests_utils/: test_config_parser.py
tests/utils/: __init__.py  test_config_parser.py
(+32 files in other folders)
