#!/usr/bin/env python
# coding: utf8
#
# Copyright (c) 2022-2026 Centre National d'Etudes Spatiales (CNES).
#
# This file is part of Bulldozer
# (see https://github.com/CNES/bulldozer).
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

# pyproject.toml
[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "Cython>=0.29.14",
    "numpy>=1.22.2"
]
build-backend = "setuptools.build_meta"

# Project metadata (PEP 621)
[project]
name = "bulldozer-dtm"
dynamic = ["version"]
authors = [{name = "CNES", email = "dimitri.lallement@cnes.fr"}]
description = "Digital Terrain Model (DTM) extraction tool"
readme = "README.md"
license-files = ["LICENSE"]
keywords = ["bulldozer", "DTM", "DSM", "3D", "Remote Sensing", "LiDAR",]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Cython",
]

requires-python = ">=3.10"

# Bulldozer packages dependencies
dependencies = [
    "Cython>=0.29.14",
    "numpy>=1.22.2",
    "rasterio>=1.2.10",
    "scipy>=1.8.0",
    "scikit-image",
    "PyYAML",
    "tqdm",
    "argcomplete",
    "psutil",
]

[project.urls]
#Documentation = "https://bulldozer.readthedocs.io/en/latest/"
Repository = "https://github.com/CNES/bulldozer"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "build",
    "isort>=5.8.0",                  # Check imports
    "black>=24.1a1",                 # PEP8 format code
    "flake8>=3.9.1",                 # General linter
    "flake8-comprehensions>=3.4.0",  # Check list/dict/set
    "flake8-bugbear>=21.4.3",        # Add some rules to flake8
    "pylint>=2.8.12",                # General linter with more rules
    "pytest",
    "pytest-cov",
    "pytest-sugar",                  # for prettier pytest
    "mypy",                          # Python typing
]

docs = [
    "mkdocs",
]

# Entry points
[project.scripts]
bulldozer = "bulldozer.pipeline.bulldozer_pipeline:bulldozer_cli"

[tool.setuptools.dynamic]
version = {file = ["bulldozer/VERSION"]}

[tool.setuptools]
packages = {find = {}}

[tool.cibuildwheel]
skip = ["pp*", "*-win32"]

[tool.black]
line-length = 120 # default 80
exclude = "(.eggs|.git|.mypy_cache|.nox|.tox|_build|build|dist|venv)"

[tool.isort]
profile = "black"
line_length = 120 # default 80

[tool.flake8]
exclude = [".git", "venv", "build", "dist", "docs"]
extend-ignore = ["B907", "E203", "E501", "W503"]
extend-select = ["B950"]
max-complexity = 30 # default deactivated
max-line-length = 120 # default 80
copyright-check = true
select = ["E", "F", "W", "C", "B9", "C4", "B"]