# Copyright (c) 2022-2026 Centre National d'Etudes Spatiales (CNES).
#
# This file is part of Bulldozer
# (see https://github.com/CNES/bulldozer).
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "Cython>=0.29.36",
    "numpy>=1.22.2"
]
build-backend = "setuptools.build_meta"

# Project metadata (PEP 621)
[project]
name = "bulldozer-dtm"
dynamic = ["version"]
authors = [{name = "CNES", email = "dimitri.lallement@cnes.fr"}]
description = "Digital Terrain Model (DTM) extraction tool"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["DTM", "DSM", "Remote Sensing", "LiDAR", "GIS"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Cython",
]

requires-python = ">=3.10"

# Bulldozer packages dependencies
dependencies = [
    "Cython>=0.29.36",
    "numpy>=1.22.2",
    "rasterio>=1.2.10",
    "scipy>=1.8.0",
    "scikit-image",
    "PyYAML",
    "tqdm",
    "argcomplete",
    "psutil",
]

[project.urls]
#Documentation = "https://bulldozer.readthedocs.io/en/latest/"
Repository = "https://github.com/CNES/bulldozer"
Issues = "https://github.com/CNES/bulldozer/issues"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7",
    "build",
    "black>=24.0,<25",                  # PEP8 format code
    "isort>=5.13,<6",                   # Check imports
    "flake8>=6.1,<7",                   # General linter
    "flake8-bugbear>=24.0,<25",         # Add some rules to flake8
    "flake8-comprehensions>=3.14,<4",   # Check list/dict/set
    "pylint>=3.2,<4",                   # General linter with more rules
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "mypy>=1.10,<2",                    # Python typing
    "typing-extensions",
]

docs = [
    "mkdocs>=1.6,<2",
]

# Entry points
[project.scripts]
bulldozer = "bulldozer.pipeline.bulldozer_pipeline:bulldozer_cli"

[tool.setuptools.dynamic]
version = {file = ["bulldozer/VERSION"]}

[tool.setuptools]
packages = {find = {}}

[tool.cibuildwheel]
skip = ["pp*", "*-win32"]

# -------------------
# Formatting tools
# -------------------

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
max-complexity = 30
extend-ignore = ["B907", "E203", "E501", "W503"]
extend-select = ["B950"]
exclude = [".git", "bulldozer_venv", "build", "dist", "docs"]

# -------------------
# Type checking
# -------------------

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = true

# -------------------
# Pytest
# -------------------

[tool.pytest.ini_options]
addopts = "-ra --cov=bulldozer --cov-report=term-missing"
testpaths = ["tests"]
