# Copyright (c) 2022-2026 Centre National d'Etudes Spatiales (CNES).
#
# This file is part of Bulldozer
# (see https://github.com/CNES/bulldozer).
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "Cython>=0.29.36",
    "numpy>=1.22.2"
]
build-backend = "setuptools.build_meta"

# Project metadata (PEP 621)
[project]
name = "bulldozer-dtm"
dynamic = ["version"]
authors = [{name = "CNES", email = "dimitri.lallement@cnes.fr"}]
description = "Digital Terrain Model (DTM) extraction tool"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["DTM", "DSM", "Remote Sensing", "LiDAR", "GIS"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Cython",
]

requires-python = ">=3.10"

# Bulldozer packages dependencies
dependencies = [
    "numpy>=1.22.2",
    "rasterio>=1.2.10",
    "scipy>=1.8.0",
    "scikit-image",
    "PyYAML",
    "tqdm",
    "argcomplete",
    "psutil",
]

[project.urls]
#Documentation = "https://bulldozer.readthedocs.io/en/latest/"
Repository = "https://github.com/CNES/bulldozer"
Issues = "https://github.com/CNES/bulldozer/issues"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7",
    "ruff>=0.5",        # Lint + format + import sort
    "mypy>=1.10,<2",    # Python typing
    "pytest>=8,<9",     # Tests
    "pytest-cov>=5,<6",
]

docs = [
    "mkdocs>=1.6,<2",
]

# Entry points
[project.scripts]
bulldozer = "bulldozer.pipeline.bulldozer_pipeline:bulldozer_cli"

[tool.setuptools.dynamic]
version = {file = ["bulldozer/VERSION"]}

[tool.setuptools]
packages = {find = {}}

[tool.cibuildwheel]
skip = ["pp*", "*-win32"]

# -------------------
# Formatting tools
# -------------------

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort 
    "UP",  # PyUpgrade 
]

ignore = [
    "E501",  # line too long
    "B008",  # function call in default argument
]

exclude = [
    "build", 
    "dist", 
    "bulldozer_venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# -------------------
# Type checking
# -------------------

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = true

# -------------------
# Pytest
# -------------------

[tool.pytest.ini_options]
addopts = "-ra --cov=bulldozer --cov-report=term-missing"
testpaths = ["tests"]
