[metadata]
name = bulldozer
version = 0.1.0
description = DTM extraction using improved drap cloth methods
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache V2.0
author = Pierre Lassalle & Dimitri Lallement & Yannick Ott
author_email = pierre.lassalle@cnes.fr & dimitri.lallement@cnes.fr & yannick.ott@thalesgroup.com


[options]
python_requires = >=3.6
packages_dir = =src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    bulldozer = bulldozer.pipeline.bulldozer_pipeline:bulldozer_cli


