[metadata]
name = bulldozer-dtm
version = 1.0.1
description = Bulldozer is a DTM extraction tool requiring only a DSM as input
url = https://github.com/CNES/bulldozer
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache V2.0
license_files = LICENSE
keywords= bulldozer,DTM,DSM,3D,Photogrammetry,Remote Sensing,LiDar,CARS
author = CNES
author_email = pierre.lassalle@cnes.fr,dimitri.lallement@cnes.fr,yannick.ott@thalesgroup.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Cython

[options]
python_requires = >=3.6
packages_dir = =src
packages = find:

# Pandora packages dependencies
install_requires =
    Cython >= 0.29.14
    numpy >= 1.22.2
    rasterio >= 1.2.10
    scipy >= 1.8.0
    PyYAML
    tqdm
    argcomplete
    psutil
    GitPython

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    bulldozer = bulldozer.pipeline.bulldozer_pipeline:bulldozer_cli


