# Copyright (c) 2024 Centre National d'Etudes Spatiales (CNES).
#
# This file is part of bulldozer
# (see https://github.com/CNES/bulldozer).
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

# Bulldozer setup configuration file

# package setup main metadata
[metadata]
name = bulldozer-dtm
author = CNES
author_email = pierre.lassalle@cnes.fr,dimitri.lallement@cnes.fr,yannick.ott@thalesgroup.com
version = 1.0.1
description = Bulldozer is a DTM extraction tool requiring only a DSM as input
url = https://github.com/CNES/bulldozer
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache V2.0
license_files = LICENSE
keywords= bulldozer,DTM,DSM,3D,Photogrammetry,Remote Sensing,LiDAR,CARS
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Cython

[options]
python_requires = >=3.8

# Bulldozer packages dependencies
install_requires =
    Cython >= 0.29.14
    numpy >= 1.22.2
    rasterio >= 1.2.10
    scipy >= 1.8.0
    PyYAML
    tqdm
    argcomplete
    psutil
    GitPython

packages_dir = =bulldozer
packages = find:

[options.packages.find]
where = bulldozer

[options.extras_require]
dev =
    pre-commit
    build
    pytest
    pytest-cov
    pytest-sugar                   # for prettier pytest
    mypy                           # Python typing

docs =
    mkdocs

notebook =
    matplotlib
    jupyterlab

[options.entry_points]
console_scripts =
    bulldozer = bulldozer.pipeline.bulldozer_pipeline:bulldozer_cli
